# RustExample

coins/: Cargo.toml
coins/src/: main.rs
data_fromfilelib/: Cargo.toml
data_fromfilelib/src/: lib.rs  test_data.txt
exefile/: coins  test_data.txt
libcoin/: Cargo.toml
libcoin/src/: lib.rs
